[package]
name = "hawktracer-rs"
version = "0.1.0"
authors = ["Marcin Kolny <marcin.kolny@gmail.com>"]
edition = "2018"
description = "An attempt to port HawkTracer profiler to Rust (see https://www.hawktracer.org)"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
